--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<mat-grid-list cols="1">
+  <mat-grid-tile>
+    <button mat-raised-button color="primary" (click)="login()">
+      Ingresar
+    </button>
+
+    <button mat-raised-button color="warn" (click)="ingresarSinLogin()">
+      Ingresar sin login
+    </button>
+  </mat-grid-tile>
+</mat-grid-list>
